# unreal-mcp

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml
MCPProject/: MCPProject.uproject
MCPProject/Config/: DefaultEngine.ini  DefaultInput.ini
MCPProject/Plugins/UnrealMCP/: UnrealMCP.uplugin
MCPProject/Plugins/UnrealMCP/Source/UnrealMCP/: UnrealMCP.Build.cs
MCPProject/Plugins/UnrealMCP/Source/UnrealMCP/Private/: MCPServerRunnable.cpp  UnrealMCPBridge.cpp  UnrealMCPModule.cpp
MCPProject/Plugins/UnrealMCP/Source/UnrealMCP/Public/: MCPServerRunnable.h  UnrealMCPBridge.h  UnrealMCPModule.h
MCPProject/Source/: MCPProject.Target.cs  MCPProjectEditor.Target.cs
MCPProject/Source/MCPProject/: MCPProject.Build.cs  MCPProject.cpp
docs/: connecting-agents.md
server/: pyproject.toml  test_actors.py  test_roundtrip.py  unreal_mcp_server.py
