[project]
name = "unreal-mcp-server"
version = "0.1.0" # x-release-please-version
description = "MCP server bridging LLM agents to the Unreal Editor via the UnrealMCP plugin."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, flake8-bugbear
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["unreal_mcp_server.py"]

[tool.hatch.build.targets.wheel.sources]
"unreal_mcp_server.py" = "unreal_mcp_server.py"
